Booting 1.20.6 support! (#1331)
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>